# internal/app/web/internal/handler/tool/uasearchhandler.go
@@ -1,0 +1,34 @@
+package tool
+
+import (
+	"fgzs-single/internal/app/web/internal/logic/tool"
+	"fgzs-single/internal/app/web/internal/svc"
+	"fgzs-single/internal/app/web/internal/types"
+	"fgzs-single/internal/define/constant"
+	"fgzs-single/internal/errorx"
+	"fgzs-single/internal/response"
+	"fgzs-single/pkg/validatorx"
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"net/http"
+)
+
+func UaSearchHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UaSearchReq
+		if err := httpx.Parse(r, &req); err != nil {
+			response.Err(r, w, errorx.ParamErr.WithDetail(err))
+			return
+		}
+		err := validatorx.Validator.Validate(req, r.Header.Get(constant.HeaderLanguage))
+		if err != nil {
+			response.Err(r, w, errorx.ParamErr.WithDetail(err))
+			return
+		}
+		if req.Ua == "" {
+			req.Ua = r.Header.Get("User-Agent")
+		}
+		l := tool.NewUaSearchLogic(r.Context(), svcCtx)
+		resp, err := l.UaSearch(&req)
+		response.Http(r, w, resp, err)
+	}
+}
